# ARHS-core

./: .drone.yml  .gitignore  README.md  install.sh  sonar-project.properties
Docker/: Dockerfile
Documentation/: readme.md
Documentation/class diagrams/: main.mdj
Documentation/diagrams/: Package.mdj
Documentation/doxygen/: Doxyfile  footer.html
Sources/Applications/Tests/helloLibrary/: main.cpp
Sources/_Linux/: makefile.lnx
Sources/_Linux/Applications/Tests/helloLibrary/: makefile.lnx  makeprj.lnx
Sources/_Linux/Documentation/: makefile
Sources/_Linux/helloLibrary/: makefile.lnx  makeprj.lnx
Sources/_Linux_ARMV7/Applications/Tests/helloLibrary/: makefile.lnx  makeprj.lnx
Sources/_Linux_ARMV7/helloLibrary/: makefile.lnx  makeprj.lnx
Sources/include/Visnode/: CMakeLists.txt
Sources/include/Visnode/hw/: serial.hpp
Sources/include/Visnode/threadweaver/: threadweaver.hpp
Sources/include/helloLibrary/: Class1.h
Sources/src/Visnode/: CMakeLists.txt  Makefile  _buildAndGrind.sh  callgrind.out.41402  callgrind.out.66960  callgrind.out.88333  compile.sh  main.cpp  prog
Sources/src/Visnode/cameras/: CMakeLists.txt  Makefile  _cam.hpp  camEnum.cpp  cameraManager.cpp
Sources/src/Visnode/hw/: serial.cpp
Sources/src/Visnode/ihidapi/: CMakeLists.txt  Makefile  hidapi_functions.cpp
Sources/src/Visnode/perfcheckers/: CMakeLists.txt  Makefile  fcheckManager.cpp  framerate.hpp
Sources/src/Visnode/psvr/: CMakeLists.txt  psvr.cpp
Sources/src/Visnode/threadweaver/: CMakeLists.txt  debugging.hpp  threadweaver.cpp  threadweaver.hpp
Sources/src/Visnode/ui/: CMakeLists.txt  Makefile  _ui.hpp  ui.cpp  uiController.cpp  uiDrawer.cpp  uiManager.cpp
Sources/src/Visnode/ui/uiElements/: old_CMakeLists.txt  uiElements.hpp
Sources/src/helloLibrary/: Class1.cpp
src/: CMakeLists.txt  Makefile  _postmake.sh  main.cpp  main.hpp  prog  topLevelManager.cpp
src/_shaders/: fragment_shader.glsl  text_fragment_shader.glsl  text_vertex_shader.glsl  vertex_shader.glsl
src/cameras/: CMakeLists.txt  Makefile  _cam.hpp  cameraManager.cpp
src/gl/: CMakeLists.txt  Camera.hpp  FlyingWindow.hpp  Mesh.hpp  Model.hpp  Shader.hpp  TextRenderer.hpp  install_deps.sh
src/graphics/: CMakeLists.txt  FlyingWindow.h  Makefile  Mesh.h  Model.h  Shader.h  TextRenderer.h
src/hardware/cameras/: _cam.hpp  cameraManager.cpp
src/hardware/hw/: serial.hpp
src/hardware/ihidapi/: CMakeLists.txt  Makefile
src/hardware/psvr/: CMakeLists.txt
src/hw/: CMakeLists.txt  Makefile  serial.cpp
src/ihidapi/: Makefile  _hidapi.hpp
src/model/controllers/: CMakeLists.txt  Makefile
src/model/controllers/ui/: menu.cpp  menu.hpp  menuItem.hpp  uiController.cpp  uiController.hpp
src/model/controllers/windows/: windowsManager.hpp
src/model/hardware/cameras/: CMakeLists.txt  Makefile  _cam.hpp  cameraManager.cpp
src/model/hardware/hw/: CMakeLists.txt  Makefile  inputKeys.hpp  inputManager.cpp  inputManager.hpp  serial.cpp  serial.hpp
src/model/hardware/hw/extendables/: CMakeLists.txt  Device.hpp  DeviceCommand.hpp  DeviceTree.cpp  DeviceTree.hpp  Makefile  SerialDevice.hpp
src/model/hardware/ihidapi/: CMakeLists.txt  Makefile
src/model/hardware/psvr/: Makefile  _psvr.hpp  psvr.cpp
src/model/patterns/commands/: CMakeLists.txt  Makefile  commands.hpp
src/model/patterns/observer/: CMakeLists.txt  Makefile  observable.cpp  observable.hpp  observer.hpp
src/model/perfcheckers/: CMakeLists.txt  Makefile  framerate.cpp  framerate.hpp
src/model/windows/: CMakeLists.txt  Makefile  window.cpp  window.hpp  windowManager.cpp  windowManager.hpp
src/perfcheckers/: fcheckManager.cpp
src/pipeline/: CMakeLists.txt  Makefile  pipeline.cpp  pipeline.hpp
src/pipeline/abstract/: pipeline.hpp  pipelineNode.cpp  pipelineNode.hpp
src/pipeline/members/: cameraPickerNode.cpp  cameraPickerNode.hpp  displayOutputNode.cpp  displayOutputNode.hpp  pluginNode.cpp  pluginNode.hpp  uiDrawerNode.cpp  uiDrawerNode.hpp  uiMergerNode.cpp  uiMergerNode.hpp  videoCaptureNode.cpp  videoCaptureNode.hpp  zbarAnalysisNode.cpp  zbarAnalysisNode.hpp
src/pipeline/members/subNodes/: fpsCounter.cpp  fpsCounter.hpp  openglTestRenderer.cpp  staticImageOverlayer.cpp  subNodes.hpp  uiMenuItem.cpp  uiMenus.hpp  uiNumberPickerItem.cpp  zbarOverlayer.cpp
src/pipeline/members/subNodes/builders/: menuBuilder.cpp  menuBuilder.hpp
src/pluginManagement/: CMakeLists.txt  Makefile  Plugin.cpp  Plugin.hpp  PluginManager.cpp  PluginManager.hpp
src/processing/zbar/: CMakeLists.txt  Makefile  zbar.cpp  zbar.hpp
src/psvr/: Makefile  _psvr.hpp
src/threadweaver/: CMakeLists.txt  Makefile  debugging.hpp  threadweaver.cpp  threadweaver.hpp
src/ui/: CMakeLists.txt  Makefile  _ui.hpp  uiController.cpp  uiDrawer.cpp  uiManager.cpp
src/ui/controllers/: uiController.cpp  uiManager.cpp
src/ui/drawer/: uiDrawer.cpp
src/ui/merger/: uiMerger.cpp
src/ui/support/: CMakeLists.txt  Makefile  UiSupport.cpp  UiSupport.hpp
src/ui/uiElements/: ui.cpp  uiElements.cpp  uiElements.hpp
